all class : key code collector

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -155,6 +155,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\CPG_InputKeyViewer.cpp" />
     <ClCompile Include="..\Classes\CPG_Input_AllowedKeys.cpp" />
     <ClCompile Include="..\Classes\CPG_Input_BasicCollector.cpp" />
+    <ClCompile Include="..\Classes\CPG_Input_KeyCodeCollector.cpp" />
     <ClCompile Include="..\Classes\CPG_Setting.cpp" />
     <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_KeyConfigScene.cpp" />
@@ -169,6 +170,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\CPG_InputKeyViewer.h" />
     <ClInclude Include="..\Classes\CPG_Input_AllowedKeys.h" />
     <ClInclude Include="..\Classes\CPG_Input_BasicCollector.h" />
+    <ClInclude Include="..\Classes\CPG_Input_KeyCodeCollector.h" />
     <ClInclude Include="..\Classes\CPG_Setting.h" />
     <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h" />
     <ClInclude Include="..\Classes\Research_Input_KeyConfigScene.h" />
