--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\CPG_Input_KeyCodeCollector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -84,6 +87,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\CPG_Input_KeyCodeCollector.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
