--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -160,6 +160,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\CPG_Input_KeyNames.cpp" />
     <ClCompile Include="..\Classes\CPG_Setting.cpp" />
     <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp" />
+    <ClCompile Include="..\Classes\Research_Input_KeyAllowScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_KeyConfigScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_KeyboardTestScene.cpp" />
     <ClCompile Include="..\Classes\RootScene.cpp" />
@@ -177,6 +178,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\CPG_Input_KeyNames.h" />
     <ClInclude Include="..\Classes\CPG_Setting.h" />
     <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h" />
+    <ClInclude Include="..\Classes\Research_Input_KeyAllowScene.h" />
     <ClInclude Include="..\Classes\Research_Input_KeyConfigScene.h" />
     <ClInclude Include="..\Classes\Research_Input_KeyboardTestScene.h" />
     <ClInclude Include="..\Classes\RootScene.h" />
